--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.5.2",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
