--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/GSD678/EventMaster#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
@@ -31,7 +32,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1"
   },
