--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
